commented out the oauth code until testing is complete
